--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+    <title> Sweeha </title>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-      Hello, my name is Sweeha.
+      <h1>Hello, Code School! </h1>
+
+      <ul>
+        <li> Git </li>
+        <li> Front end foundations </li>
+        <li> SQL </li>
+      </ul>
+
+      
   </body>
 </html>
