--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-      <h1>Hello, Code School! </h1>
+      <h1 align= 'center'>Hello, Code School! </h1>
 
       <ul>
         <li> Git </li>
@@ -15,6 +15,6 @@
         <li> SQL </li>
       </ul>
 
-      
+
   </body>
 </html>
